# saasrx-starter

./: .dockerignore  .gitignore  .mise.toml  CLAUDE.md  README.md  pyproject.toml  render.yaml  rxconfig.py  rxinfo.py
.claude/: settings.local.json
saas/: app_config.py  app_secret.py  routes.py  saas.py  saas_config.py  saas_secrets.py
saas/api/: __init__.py  api.py  basic_routes.py  webhooks.py
saas/components/: admin_components.py  auth_components.py  card.py  download.py  features.py  general.py  hero_section.py  navbar.py  signin_components.py  user_email.py
saas/models/: __init__.py  models_config.py  query.py  schema.py
saas/pages/: __init__.py  checkout.py  dashboard.py  docs.py  index.py  user_pages.py
saas/rxext/: __init__.py  app.py  app_config.py  auth.py  cli.py  config.py  console.py  dto.py  endpoints.py  magic_link.py  patched.py  secrets.py  theme.py
saas/rxext/utils/: __init__.py  email_util.py  exec_util.py  stripe_util.py  token_utils.py
saas/state/: __init__.py  state.py
saas/utils/: email_util.py  stripe_util.py
saasrx/: config.py  routes.py  saasrx.py
saasrx/api/: bootstrap.py  health.py  routes.py  transformer.py  webhooks.py
saasrx/api/api_routes/: example.py  health.py  webhooks.py
saasrx/pages/: __init__.py  index.py
saasrx/state/: __init__.py  menu_items.py  state.py
scripts/: dbseed.py
src/rxext/: __init__.py  pyproject.toml
src/rxext/lib/: __init__.py  cli.py  config.py  patched.py
src/saasrx/: app.py
src/saasrx/pages/: index.py
tests/: test_auth.py  test_email.py  test_token_utils.py
