[project]
    name = "saasrx"
    version = "0.0.1"
    description = "saasrx starter kit"
    readme = "README.md"
    authors = [{ name = "graham", email = "graham.annett@gmail.com" }]
    # cant use 3.13 if deploying on reflex
    requires-python = ">=3.12"
    dependencies = [
        "bcrypt>=4.2.0",
        "psycopg2-binary==2.9.10",
        "reflex==0.6.8",
        "resend==2.4.0",
        "stripe==11.2.0",
        "supabase==2.9.1",
    ]

[tool.setuptools.packages.find]
    # since not using src layout because of reflex, need to specify the package for scripts to work
    where = ["."]
    include = ["saas"]

[tool.ruff]
    line-length = 110
    [tool.ruff.lint.isort]
        known-third-party = ["supabase"]

[dependency-groups]
    dev = ["pytest>=8.3.4", "reflex-hosting-cli>=0.1.33"]
