[project]
    name = "saasrx"
    version = "0.0.1"
    description = "saasrx starter kit"
    readme = "readme.md"
    authors = [{ name = "graham", email = "graham.annett@gmail.com" }]
    requires-python = ">=3.13"
    dependencies = [
        "bcrypt>=4.2.0",
        "psycopg2-binary==2.9.10",
        "reflex==0.7.13",
        "resend==2.10.0",
        "stripe==12.2.0",
        "supabase==2.15.2",
    ]

[tool.setuptools.packages.find]
    # since not using src layout because of reflex, need to specify the package for scripts to work
    where   = ["."]
    include = ["saas"]

[tool.ruff]
    line-length = 110
    [tool.ruff.lint.isort]
        known-third-party = ["supabase"]

[dependency-groups]
    dev = ["pytest>=8.3.4", "reflex-hosting-cli>=0.1.33"]
