[project]
    name = "saasrx"
    version = "0.0.1"
    description = "saasrx starter kit"
    readme = "readme.md"
    authors = [{ name = "graham", email = "graham.annett@gmail.com" }]
    requires-python = ">=3.13"
    dependencies = [
        "bcrypt>=4.2.0",
        "psycopg2-binary==2.9.10",
        "reflex==0.7.13",
        "resend==2.10.0",
        "stripe==12.2.0",
        "supabase==2.15.2",
        "rxext",
    ]


    # [tool.setuptools.packages.find]
    #     # since not using src layout because of reflex, need to specify the package for scripts to work
    #     where   = ["packages/*"]
    #     include = ["saas"]

[build-system]
    requires      = ["hatchling"]
    build-backend = "hatchling.build"


[tool.ruff]
    [tool.ruff.lint.isort]
        known-first-party = ["rxext"]
        known-third-party = ["supabase"]


[tool.uv.sources]
    rxext = { workspace = true }

[tool.uv.workspace]
    members = ["packages/*"]

[dependency-groups]
    dev = ["pytest>=8.3.4", "reflex-hosting-cli>=0.1.33", "uvicorn>=0.34.2"]
